Refactor banner grabbing and OS detection for improved clarity and functionality and add os detection

--- a/configs/security-audit.yaml
+++ b/configs/security-audit.yaml
@@ -37,6 +37,9 @@ network:
   tcp_timeout: 5
   udp_timeout: 5
   max_threads: 50
+  os_detect: true
+  banner_grab: true
+  service_scan: true
 
 # Configuration du scanner HTTP
 http:
